--- a/mbdyn/manual/input/logfile.tex
+++ b/mbdyn/manual/input/logfile.tex
@@ -746,7 +746,7 @@ All data in one line, without continuation.
 
 \section{File drivers}
 
-\subsection{INET socket stream file drifer}
+\subsection{INET socket stream file driver}
 The \kw{stream} file driver in case an INET socket is used:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
