--- a/mbdyn/manual/tecman/tecman.tex
+++ b/mbdyn/manual/tecman/tecman.tex
@@ -49,6 +49,8 @@
 \newcommand{\dof}{DOF}
 \newcommand{\dofs}{DOFs}
 
+\newcommand{\kw}[1]{\textcolor{red}{\texttt{#1}}}
+
 % Custom
 \topmargin 0.31cm % 0.00cm
 \oddsidemargin 0.00cm
