drees 2 identical to drees

--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -1141,8 +1141,7 @@ models:
         [ , \bnt{option} [ , ... ] ]
 
     \bnt{glauert_type} ::= \{ \kw{glauert} | \kw{coleman} | \kw{drees}
-        | \kw{payne} | \kw{white and blake} | \kw{pitt and peters} | \kw{howlett}
-        | \kw{drees 2} \}
+        | \kw{payne} | \kw{white and blake} | \kw{pitt and peters} | \kw{howlett} \}
 
     \bnt{option} ::=
         \{ \kw{ground} , \bnt{ground_node}
