--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -9,9 +9,8 @@ Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 
-MBDyn 1.X-Devel
+MBDyn 1.7.3
 	Enhancements:
-		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added network byte order to drivers & element output streams
 		- added width/format for eigenanalysis output files
 		  (noted by Reinhard Resch)
@@ -22,6 +21,7 @@ MBDyn 1.X-Devel
 		- added module-flightgear (Luca Conti for GSoC 2017)
 	Backward compatibility issues:
 		- got rid of adams and motionview output support
+		- deprecated "drees 2" inflow model (identical to "dreese")
 	Known issues:
 	Bug fixes:
 		- fixed (harmless?) off-by-one read in fixed step drive
@@ -30,6 +30,7 @@ MBDyn 1.X-Devel
 		- fixed build without libmbc (noted by Richard Crozier)
 		- fixed test if residual is NaN (Reinard Resch)
 		- fixed error message in strext (Richard Crozier)
+		- fixed typos and strengthened inflow models
 
 MBDyn 1.7.2
 	Enhancements:
