--- a/mbdyn/manual/input/logfile.tex
+++ b/mbdyn/manual/input/logfile.tex
@@ -718,7 +718,7 @@ the \kw{stream output} element in case an local socket is used:
 \end{Verbatim}
 %\end{verbatim}
 The \nt{content} formatting is specified in 
-section~\ref{sec:app:logfile:output_elements:content}.
+section~\ref{sec:APP:LOGFILE:OUTPUT_ELEMENTS:CONTENT}.
 All data in one line, without continuation.
 
 \subsection{output element content}\label{sec:APP:LOGFILE:OUTPUT_ELEMENTS:CONTENT}
