--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -1152,7 +1152,7 @@
 	author = "David A. Peters and Mnaouar ChouChane and Mark Fulton",
 	year = 1990,
 	title = "Helicopter Trim with Flap-Lag-Torsion and Stall by an Optimized Controller",
-	journal = "{J. Guidance}",
+	journal = "{J.\ of Guidance, Control, and Dynamics}",
 	month = "September-October",
 	volume = "13",
 	number = "5",
