missing gust parameter; to be explained

--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -323,7 +323,7 @@ This element is defined as follows:
         \bnt{reference_chord} ,
         \bnt{number_of_aerodynamic_states} ,
         [ \kw{rigid} , ]
-        [ \kw{gust} , ]
+        [ \kw{gust} , \bnt{Vff} , ]
         " \bnt{modal_matrices_file} "
 \end{Verbatim}
 %\end{verbatim}
