Fixed typo in beam output

--- a/mbdyn/manual/input/netcdfout.tex
+++ b/mbdyn/manual/input/netcdfout.tex
@@ -297,13 +297,13 @@ at the evaluation point, in the reference frame of the beam section;
 \item \kw{elem.beam.}\bnt{label}\kw{.M} contains the internal moment
 at the evaluation point, in the reference frame of the beam section;
 
-\item \kw{elem.beam.}\bnt{label}\kw{.mu} contains the linear strain
+\item \kw{elem.beam.}\bnt{label}\kw{.nu} contains the linear strain
 at the evaluation point, in the reference frame of the beam section;
 
 \item \kw{elem.beam.}\bnt{label}\kw{.k} contains the angular strain
 at the evaluation point, in the reference frame of the beam section;
 
-\item \kw{elem.beam.}\bnt{label}\kw{.muP} contains the linear strain rate
+\item \kw{elem.beam.}\bnt{label}\kw{.nuP} contains the linear strain rate
 at the evaluation point, in the reference frame of the beam section;
 
 \item \kw{elem.beam.}\bnt{label}\kw{.kP} contains the angular strain rate
