--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -15,6 +15,7 @@ MBDyn 1.X-Devel
 	Backward compatibility issues:
 	Known issues:
 	Bug fixes:
+		- fix TotalPinJoint assembly (Eduardo Okabe)
 
 MBDyn 1.7.3
 	Enhancements:
