--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -16,6 +16,7 @@ MBDyn 1.X-Devel
 	Known issues:
 	Bug fixes:
 		- fix TotalPinJoint assembly (Eduardo Okabe)
+		- fix eigenanalysis before derivatives
 
 MBDyn 1.7.3
 	Enhancements:
