--- a/mbdyn/manual/input/beam.tex
+++ b/mbdyn/manual/input/beam.tex
@@ -1359,7 +1359,7 @@ A more complete input format is
         \bnt{node_2_label} ,
             [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_2} ,
             [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_2} , ]
-        \bnt{node_3} ,
+        \bnt{node_3_label} ,
             [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_3} ,
             [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_3} , ]
         \{ (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I}
