--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -2183,12 +2183,43 @@ drive callers, when the output needs to be used as is.
 To be used in conjunction with a \kw{drive} drive caller,
 filters the output of the ancillary drive according to the discrete filter coefficients.
 \begin{itemize}
-\item \bnt{n\_a}: number of regression coefficients
-\item \bnt{a}$_i$: $i$-th regression coefficient, $i \in [1, \bnt{n\_a}]$
-\item \bnt{b\_0}: direct transmission coefficient, must always be present; set to zero if not needed
-\item \bnt{n\_b}: number of input coefficients
-\item \bnt{b}$_i$: $i$-th input coefficient, $i \in [0, \bnt{n\_b}]$
+\item \nt{n\_a}: number of regression coefficients
+\item \nt{a}$_i$: $i$-th regression coefficient, $i \in [1, \nt{n\_a}]$
+\item \nt{b\_0}: direct transmission coefficient, must always be present; set to zero if not needed
+\item \nt{n\_b}: number of input coefficients
+\item \nt{b}$_i$: $i$-th input coefficient, $i \in [0, \nt{n\_b}]$;
+recall that $b_0$ is treated differently.
 \end{itemize}
+Formula:
+\begin{align}
+	y_k &=
+	\sum_{i=1}^{\nt{n\_a}} \nt{a}_i \, y_{k-i}
+	+ \sum_{i=0}^{\nt{n\_b}} \nt{b}_i \, u_{k-i}
+\end{align}
+The coefficients of the filter can be computed for example using Matlab
+or similar tools.
+To obtain the coefficients of a 2nd order Butterworth filter,
+with cut frequency at 10 Hz, when the time step is \texttt{dt}, use
+\begin{verbatim}
+    >> [B, A] = butter(2, 10./(1/dt/2));
+    >> a_1 = -A(2);
+    >> a_2 = -A(3);
+    >> b_0 = B(1);
+    >> b_1 = B(2);
+    >> b_2 = B(3);
+\end{verbatim}
+The relative cut frequency (the second parameter in the \texttt{butter()} call)
+is the cut frequency of the filter divided by half the sampling frequency,
+namely $1/\texttt{dt}/2$.
+The corresponding MBDyn input is
+\begin{Verbatim}[commandchars=\\\{\}]
+    ...,
+    \kw{drive}, \kw{discrete filter},
+        2, a_1, a_2,
+        b_0,
+        2, b_1, b_2,
+        \bnt{pre_filter_drive_caller} , ...
+\end{Verbatim}
 
 \noindent
 \emph{NOTE: requires fixed time step.}
