--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -15,7 +15,7 @@
 % This program is free software; you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
 % the Free Software Foundation (version 2 of the License).
-% 
+%
 %
 % This program is distributed in the hope that it will be useful,
 % but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -51,7 +51,7 @@ The input format is:
         (\htybkw{Shape}{1D})          \bnt{surface_twist} ,
         [ \kw{tip loss} , (\htybkw{Shape}{1D}) \bnt{tip_loss} , ]
         \bnt{integration_points}
-        [ , \kw{control} , (\hty{DriveCaller}) \bnt{control_drive} ] 
+        [ , \kw{control} , (\hty{DriveCaller}) \bnt{control_drive} ]
         [ , \bnt{airfoil_data} ]
         [ , \kw{unsteady} , \{ \kw{bielawa} \} ]
         [ , \kw{jacobian} , \{ \kw{yes} | \kw{no} | \bnt{bool} \} ]
@@ -68,29 +68,29 @@ where
     # \bnt{elem_type} ::= \kw{aerodynamic body}
     \bnt{body_conn} ::= \bnt{node_label}
         [ , [ \kw{user defined} ] \kw{induced velocity} , \bnt{induced_velocity_label}
-            [ , \kw{passive} ] , ] 
-        (\hty{Vec3})              <relative_surface_offset> , 
+            [ , \kw{passive} ] , ]
+        (\hty{Vec3})              <relative_surface_offset> ,
         (\hty{OrientationMatrix}) <relative_surface_orientation> ,
         (\ty{real})            <surface_span>
 
     # \bnt{elem_type} ::= \kw{aerodynamic beam2}
     \bnt{beam2_conn} ::= \bnt{beam2_label}
         [ , [ \kw{user defined} ] \kw{induced velocity} , \bnt{induced_velocity_label}
-            [ , \kw{passive} ] , ] 
+            [ , \kw{passive} ] , ]
         (\hty{Vec3})              \bnt{relative_surface_offset_1} ,
         (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_1} ,
         (\hty{Vec3})              \bnt{relative_surface_offset_2} ,
         (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_2} ,
 
     # \bnt{elem_type} ::= \kw{aerodynamic beam3}
-    \bnt{beam3_conn} ::= \bnt{beam3_label} 
+    \bnt{beam3_conn} ::= \bnt{beam3_label}
         [ , [ \kw{user defined} ] \kw{induced velocity} , \bnt{induced_velocity_label}
-            [ , \kw{passive} ] , ] 
+            [ , \kw{passive} ] , ]
         (\hty{Vec3})              \bnt{relative_surface_offset_1} ,
         (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_1} ,
         (\hty{Vec3})              \bnt{relative_surface_offset_2} ,
         (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_2} ,
-        (\hty{Vec3})              \bnt{relative_surface_offset_3} ,       
+        (\hty{Vec3})              \bnt{relative_surface_offset_3} ,
         (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_3} ,
 
     \bnt{airfoil_data} ::=
@@ -115,7 +115,7 @@ and
 The \nt{custom\_output} optional data consists in
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{custom_output} ::= \kw{custom output} , 
+    \bnt{custom_output} ::= \kw{custom output} ,
         \bnt{custom_output_flag} [ , ... ]
 \end{Verbatim}
 %\end{verbatim}
@@ -140,14 +140,14 @@ a \kw{user defined} element with that label is looked up.
 % If the optional (MISSING TEXT)
 
 An arbitrary relative orientation and offset is allowed for all elements with
-respect to the nodes they are linked to. 
+respect to the nodes they are linked to.
 This means that the aerodynamic beam offsets refer to the position
 of the beam's nodes, and have nothing to do with offsets related
 to the structural beam element.
 
 The \htybkw{Shape}{1D} entities are used to compute the physical chord,
 aerodynamic center, velocity measurement point (the point where the
-kinematic boundary conditions are evaluated) and twist, in radians, as functions 
+kinematic boundary conditions are evaluated) and twist, in radians, as functions
 of the dimensionless abscissa along the span.
 
 The optional \kw{tip loss} keyword allows to define an additional shape,
@@ -175,11 +175,11 @@ relative to the centerline of the elements, that is the line in direction 3
 of the local frame from the end of the offset vector.
 This line is assumed to be at the 25\% of the airfoil chord when steady
 aerodynamic coefficients are used (\nt{unsteady\_flag} = 0).
-The direction 1 is assumed to be the ``reference'' line of the airfoil, 
+The direction 1 is assumed to be the ``reference'' line of the airfoil,
 from the trailing edge to the leading edge (points ``forward''),
-while direction 2 is normal to the other two and goes from the lower 
-to the upper side of the airfoil (points ``up''). 
-Figure~\ref{fig:AIRFOIL} shows the arrangement of the airfoil geometry 
+while direction 2 is normal to the other two and goes from the lower
+to the upper side of the airfoil (points ``up'').
+Figure~\ref{fig:AIRFOIL} shows the arrangement of the airfoil geometry
 and properties.
 
 \begin{figure}[h]
@@ -189,7 +189,7 @@ and properties.
 \end{figure}
 
 The \nt{airfoil\_data} defaults to a built-in NACA 0012 semi-analytical
-model (FIXME: the unsteady correction is buggy; use the \kw{c81} 
+model (FIXME: the unsteady correction is buggy; use the \kw{c81}
 mode instead).
 
 The \kw{multiple} mode of the c81 data allows to specify
@@ -197,8 +197,8 @@ more than one airfoil for an aerodynamic element; the transition
 between airfoils is sharp.
 The integer \nt{airfoil\_number} indicates how many airfoils are expected;
 the real \nt{end\_point} indicates where the influence zone for that
-airfoil ends, expressed in terms of a non-dimensional abscissa spanning 
-$\plbr{-1,1}$ along the reference line, roughly along axis 3 
+airfoil ends, expressed in terms of a non-dimensional abscissa spanning
+$\plbr{-1,1}$ along the reference line, roughly along axis 3
 of the aerodynamic reference frame; \nt{end\_point} must not lie outside
 the element.
 So, for example, if airfoil NACA 0015 is used in the leftmost part
@@ -219,7 +219,7 @@ and NACA 0009 is used in the remaining rightmost 1/4, the syntax is:
     # ...rest of aerodynamic element definition
 \end{verbatim}
 
-The \kw{interpolated} mode of the \kw{c81} data allows to specify 
+The \kw{interpolated} mode of the \kw{c81} data allows to specify
 a smooth transition between different airfoils inside an element.
 The interpolation occurs at the integration points where the
 aerodynamic data are required, and it is performed once for all
@@ -254,7 +254,7 @@ for each block, that describe data at each Gauss integration point;
 multiple blocks for a single element are written on the same line.
 The format is:
 \begin{itemize}
-    \item the angle of attack at that station, in degrees 
+    \item the angle of attack at that station, in degrees
 	(namely, the angle between the component of the airfoil velocity,
 	evaluated at the velocity measurement point, that in the airfoil
 	plane and a reference line on the airfoil)
@@ -307,17 +307,17 @@ the output is repeated on the same line for each portion of beam.
 
 \noindent
 This element is used to model an aerodynamic modal element,
-i.e.\ an unsteady aerodynamic model that inherits the structural 
+i.e.\ an unsteady aerodynamic model that inherits the structural
 motion from a \htmlref{\kw{modal joint}}{sec:EL:STRUCT:JOINT:MODAL} element.
-Its definition is very similar to that of the modal element, 
-but it also includes some data representing unsteady aerodynamics 
+Its definition is very similar to that of the modal element,
+but it also includes some data representing unsteady aerodynamics
 in the time domain trough the residualization matrices.
 This element is defined as follows:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{elem_type} ::= \kw{aeromodal}
 
-    \bnt{normal_arglist} ::= 
+    \bnt{normal_arglist} ::=
         \bnt{reference_modal_joint} ,
         (\hty{OrientationMatrix}) \bnt{orientation} ,
         \bnt{reference_chord} ,
@@ -327,8 +327,8 @@ This element is defined as follows:
         " \bnt{modal_matrices_file} "
 \end{Verbatim}
 %\end{verbatim}
-With this formulation, anytime an \kw{aeromodal} element is defined, 
-the user needs to declare the number of modal aerodynamic elements 
+With this formulation, anytime an \kw{aeromodal} element is defined,
+the user needs to declare the number of modal aerodynamic elements
 in use in the \kw{control data} section.
 An \htmlref{\kw{air properties}}{sec:EL:AERO:AIRPROPERTIES}
 card definition is also required.
@@ -340,7 +340,7 @@ The modal joint must be connected to a \kw{modal} node;
 clamped modal joints are not supported.
 
 The keyword \kw{rigid} indicates that the generalized aerodynamic forces
-provided by the model include global forces and moments associated 
+provided by the model include global forces and moments associated
 to the rigid body motion of the underlying modal element (FIXME: untested).
 
 The keyword \kw{gust} activates an optional gust model,
@@ -399,25 +399,25 @@ The file is formatted as follows:
         131.25, 10, "ha145b.fea";
 \end{verbatim}
 The \kw{aeromodal} element is declared with the label \texttt{WING}.
-This element is attached to a \kw{modal} joint 
+This element is attached to a \kw{modal} joint
 named \texttt{WING\_JOINT}.
-The orientation of the aerodynamic reference with respect 
+The orientation of the aerodynamic reference with respect
 to the nodal reference is here expressed by the identity matrix (\kw{eye}).
 The aerodynamic element chord is 131.25 inches.
-This quantity must be consistent with the system chosen to define 
+This quantity must be consistent with the system chosen to define
 the whole model (SI, for example; in this case, British Units).
-The next field, 10, indicates the number of states needed to use 
+The next field, 10, indicates the number of states needed to use
 the aerodynamic model.
 \texttt{ha145b.fea} is the name of the file that contains
-the state space model matrices, obtained with an approximation 
+the state space model matrices, obtained with an approximation
 chosen by the user.
-In this particular case, a 10 states Pad\'e approximation 
+In this particular case, a 10 states Pad\'e approximation
 has been chosen.
 This example is taken from the Bisplinghoff Ashley Halfman
-(BAH) Jet Transport Wing cantilevered wing with modal aerodynamic 
+(BAH) Jet Transport Wing cantilevered wing with modal aerodynamic
 frequency response, computed by a double-lattice method at Mach 0.0.
-Data were extracted from the MSC-NASTRAN aeroelastic example file, 
-named \texttt{ha145b}, while the aerodynamic state-space fitting 
+Data were extracted from the MSC-NASTRAN aeroelastic example file,
+named \texttt{ha145b}, while the aerodynamic state-space fitting
 has been computed using a Pad\'e polynomial approximation
 (by Pasinetti \& Mantegazza, \cite{PASINETTI-MANTEGAZZA-1999}).
 All quantities are expressed in inches and pounds.
@@ -463,6 +463,9 @@ radians. If not set, they are supposed null at the initial time. Also
 the earth radius can optionally be provided, with the default value
 being the average, \textbf{6371005 m}.
 
+Please note that longitude and latitude are calculated assuming a ``flat''
+world, discarding the Earth's surface curvature.
+
 \begin{center}
 \includegraphics[width=.5\textwidth]{elicottero}
 \end{center}
@@ -479,40 +482,45 @@ The following data are available:
 \begin{itemize}
 \item \kw{"airspeed"}: the airspeed as seen by the reference
 	point on the aircraft, i.e.\ the absolute value
-	of the combination of the airstream speed and of the node speed
+	of the combination of the airstream speed and of the node speed,
+  with units m/s
 \item \kw{"groundspeed"}: the absolute value of the projection
-	of the node speed in the $xy$ plane of the ``world''
+	of the node speed in the $xy$ plane of the ``world'', with units m/s
 \item \kw{"altitude"}: the $z$ component of the node position
-	with respect to the ``world''
+	with respect to the ``world'', in meters
 \item \kw{"attitude"}: the angle between the $x$ axis of the local
-  frame and the ``world'' $xy$ plane % i.e. $\tan^{-1}\plbr{r_{31}, r_{11}}$
-	% (FIXME: better $\arcsin\plbr{r_{31}}$?)
+  frame and the ``world'' $xy$ plane,  i.e. $\sin^{-1}\plbr{r_{31}}$,
+  in radians
 \item \kw{"bank"}: the angle between the $y$ axis of the local
-  frame and the ``world'' $xy$ plane % i.e. $-\tan^{-1}\plbr{r_{32}, r_{22}}$
-	% (FIXME: better $\arcsin\plbr{r_{32}}$?)
+  frame and the ``world'' $xy$ plane, i. e $\sin^{-1}\plbr{r_{32}}$,
+  in radians
 \item \kw{"turn"}: the turn rate, the $z$ component of the angular
   velocity expressed in the ``world'' reference frame, measured in rad/min
 \item \kw{"slip"}: the sideslip angle, the angle between the $x$ axis of
   the local frame and the projection of the velocity vector in the $xy$
-  plane of the local frame
+  plane of the local frame, units are radians
 \item \kw{verticalspeed"}: the $z$ component of the node velocity
-	in the ``world'' reference system
+	in the ``world'' reference system, in m/s
 \item \kw{"angleofattack"}: the angle between the local $z$ and $x$ components
-	of the velocity (airstream plus node),
-	expressed in the reference frame of the aircraft
+	of the velocity (airstream plus node), expressed in the reference frame
+  of the aircraft, in radians
 \item \kw{"heading"}: the angle between the $x$ axis of the aircraft
-	and the ``north'' (the global $x$ axis) about the global $z$ axis
+	and the ``north'' (the global $x$ axis) about the global $z$ axis,
+  in radians
 \item \kw{"longitude"}: the aicraft longitude, in radians
 \item \kw{"latitude"}: the aicraft latitude, in radians
 \item \kw{"rollrate"}: the component of the angular velocity
 	of the node representing the aircraft along the $x$ axis
-	of the node itself (positive when the right wing moves downward)
+	of the node itself (positive when the right wing moves downward),
+  in rad/s
 \item \kw{"pitchrate"}: the component of the angular velocity
 	of the node representing the aircraft along the $y$ axis
-	of the node itself (positive when the nose pitches upward)
+	of the node itself (positive when the nose pitches upward),
+  in rad/s
 \item \kw{"yawrate"}: the component of the angular velocity
 	of the node representing the aircraft along the $z$ axis
-	of the node itself (positive when the right wing moves backward)
+	of the node itself (positive when the right wing moves backward),
+  in rad/s
 \end{itemize}
 
 \paragraph{Example.} \
@@ -540,10 +548,6 @@ The following data are available:
                 element, AIRCRAFT, aerodynamic element, string, "yawrate",
                     linear, 0., -YAW_GAIN;
 \end{verbatim}
-
-
-\noindent
-\emph{Note: this element is eXperimental.}
 
 
 
@@ -685,13 +689,13 @@ where
 \item $\T{x}$ is the position of the point whose airstream velocity
 is being computed;
 \item $t$ is the current time;
-\item $\T{n}$ is the unit vector \nt{perturbation\_direction} 
+\item $\T{n}$ is the unit vector \nt{perturbation\_direction}
 that defines the direction of the velocity perturbation;
-\item $g\plbr{\cdot}$ is the function \nt{front\_profile} 
+\item $g\plbr{\cdot}$ is the function \nt{front\_profile}
 that defines the gust profile;
-\item $\T{f}$ is the unit vector \nt{front\_direction} 
+\item $\T{f}$ is the unit vector \nt{front\_direction}
 that defines the direction of propagation of the front;
-\item $V_\mathrm{ref}$ is the velocity \nt{front\_velocity} 
+\item $V_\mathrm{ref}$ is the velocity \nt{front\_velocity}
 of propagation of the front in direction $\T{f}$.
 \end{itemize}
 As an example, a transverse cosine-shaped gust, with a wavelength of 100 m
@@ -851,7 +855,7 @@ on dynamic pressure and angle of attack and sideslip angle.
         [ \kw{alpha first} , \{ \kw{no} | \kw{yes} \} , ]
         \{ \bnt{data_file_specification} | \kw{reference} , \bnt{gaf_data_label} \}
 
-    \bnt{data_file_specification} ::= \kw{file} , 
+    \bnt{data_file_specification} ::= \kw{file} ,
         [ \{ \kw{angle units} , \{ \kw{radians} | \kw{degrees} \}
             | \kw{scale angles} , \bnt{angle_scale_factor} \} , ]
         [ \kw{scale lengths} , \bnt{length_scale_factor} , ]
@@ -881,7 +885,7 @@ from that of the node \nt{node\_label} by the orientation matrix
 	,
 \end{align}
 \end{subequations}
-where $\T{x}_n$ and $\TT{R}_n$ are the position and orientation 
+where $\T{x}_n$ and $\TT{R}_n$ are the position and orientation
 of the node, and $\dot{\T{x}}_n$ and $\T{\omega}_n$ are its linear
 and angular velocity.
 By default the angles are computed from the components of $\T{v}$
@@ -1089,7 +1093,7 @@ The corresponding statement in the input file is
 \label{sec:EL:AERO:INDVEL}
 The \kw{induced velocity} element is used to associate the aerodynamic elements
 that model the lifting surfaces of an aircraft,
-or the blades of a helicopter rotor, when some inflow related computations 
+or the blades of a helicopter rotor, when some inflow related computations
 are required.
 
 By means of different inflow models, and by means
@@ -1127,11 +1131,11 @@ The syntax of the helicopter rotor \kw{induced velocity} element is:
         \kw{induced velocity} , \bnt{induced_velocity_model}
 \end{Verbatim}
 %\end{verbatim}
-The optional \nt{rotor\_orientation} is required when axis 3 
+The optional \nt{rotor\_orientation} is required when axis 3
 of the \nt{craft\_node} is not aligned with the rotor axis; axis 3
 of the \nt{rotor\_node} must be aligned with the rotor axis.
 
-There are five models of induced velocity. 
+There are five models of induced velocity.
 The first is no induced velocity; the syntax is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
@@ -1147,7 +1151,7 @@ models:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{induced_velocity_model} ::=
-        \{ \kw{uniform} | \kw{glauert} [ , \kw{type} , \bnt{glauert_type} ] | \kw{mangler} \} , 
+        \{ \kw{uniform} | \kw{glauert} [ , \kw{type} , \bnt{glauert_type} ] | \kw{mangler} \} ,
         \bnt{reference_omega} , \bnt{reference_radius}
         [ , \bnt{option} [ , ... ] ]
 
@@ -1183,7 +1187,7 @@ is used for an approximate correction of the axial inflow velocity
 \cite{NASA-TR-3021}.
 
 \item
-The \nt{memory\_factor}, the \nt{hover\_correction\_factor} 
+The \nt{memory\_factor}, the \nt{hover\_correction\_factor}
 and the \nt{ff\_correction\_factor} (forward flight) are
 used to correct the nominal induced velocity, according to the formula
 \begin{align*}
@@ -1208,15 +1212,15 @@ no delay means there is no memory of the previous value.
 The memory factor behaves like a discrete first-order low-pass filter.
 As a consequence, its behavior depends on the integration time step.
 The \nt{memory\_factor} parameter defaults to 0.
-The \nt{hover\_correction\_factor} 
+The \nt{hover\_correction\_factor}
 and \nt{ff\_correction\_factor} parameters default to 1.
 
 \item
-The \nt{max\_iterations}, \nt{tolerance} 
-and \nt{eta} parameters refer to the iteration cycle 
+The \nt{max\_iterations}, \nt{tolerance}
+and \nt{eta} parameters refer to the iteration cycle
 that is performed to compute the nominal induced velocity.
-After \nt{max\_iterations}, or when the absolute value 
-of the difference between two iterations of the nominal induced 
+After \nt{max\_iterations}, or when the absolute value
+of the difference between two iterations of the nominal induced
 velocity is less than \nt{tolerance}, the cycle ends.
 Only a fraction \nt{eta} of the difference between two
 iterations of the nominal induced velocity is actually
@@ -1230,9 +1234,9 @@ based on \cite{PITT}, with 3 inflow states.
 The syntax is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{induced_velocity_model} ::= \kw{dynamic inflow} , 
-        \bnt{reference_omega} , 
-        \bnt{reference_radius} 
+    \bnt{induced_velocity_model} ::= \kw{dynamic inflow} ,
+        \bnt{reference_omega} ,
+        \bnt{reference_radius}
         [ , \bnt{option} [ , ... ] ]
 
     \bnt{option} ::=
@@ -1247,7 +1251,7 @@ The syntax is:
 Most of the parameters are the same as for the previous models.
 The optional \kw{delay} parameter is no longer allowed.
 The three states, corresponding to uniform, fore-aft and lateral inflow,
-can be explicitly initialized by means of the optional 
+can be explicitly initialized by means of the optional
 \kw{initial value} parameter.
 
 \paragraph{Output}
@@ -1308,4 +1312,3 @@ frame described in the Output Section above.
 \subsection{Rotor}
 \label{sec:EL:AERO:ROTOR}
 Deprecated; see \kw{induced velocity} (Section~\ref{sec:EL:AERO:INDVEL:ROTOR}).
-
