--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -4510,6 +4510,10 @@ along a line attached to the first node.
         [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation} , ]
         \bnt{node_2_label}
         [ , \kw{offset} , (\hty{Vec3}) \bnt{relative_offset} ]
+	[ , \kw{friction} ,
+            [ \kw{preload} , \bnt{const_value} , ]
+            \bnt{friction_model} , 
+            \bnt{shape_function} ]
 \end{Verbatim}
 %\end{verbatim}
 A point, optionally offset by \nt{relative\_offset} from the position
@@ -4517,6 +4521,7 @@ of node \nt{node\_2\_label}, slides along a line that passes through a point
 that is rigidly offset by \nt{relative\_line\_position}
 from the position of \nt{node\_1\_label}, and is directed as direction 3 
 of \nt{relative\_orientation}.
+Note that the \kw{friction} keyword can currently only be used with the \kw{in line} joint without \kw{offset}.
 The joint is shown in Figure~\ref{fig:el:joint:INLINE} where the origin and orientation of \nt{node\_1} are given by axis 1$^\prime$, 2$^\prime$, 3$^\prime$ and \nt{relative\_line\_position} and \nt{relative\_orientation} are the transformations that yield axis 1$^\prime_0$, 2$^\prime_0$, 3$^\prime_0$ when applied to its coordinate axis. The origin and orientation of \nt{node\_2} are given by axis 1, 2, 3 and axis 1$_0$, 2$_0$, 3$_0$ is the result of applying the \nt{relative\_offset} translation to its coordinate axis.
 \begin{figure}
 \centering
@@ -4524,6 +4529,13 @@ The joint is shown in Figure~\ref{fig:el:joint:INLINE} where the origin and orie
 \caption{Inline joint.}
 \label{fig:el:joint:INLINE}
 \end{figure}
+\subsubsection{Output}
+The output occurs in the \texttt{.jnt} file, according to default joint output
+for the first 13 columns; and if friction is present:
+\begin{itemize}
+\item column 14: the friction force along the line of the joint (applied in negative and positive directions for nodes 1 and 2, respectively);
+\item subsequent columns: any friction model specific data (quite possibly the friction coefficient).
+\end{itemize}
 
 
 
@@ -5133,7 +5145,7 @@ for the first 13 columns; specific columns contain:
 If friction is present:
 \begin{itemize}
 \item column 20: the friction moment about the revolute axis;
-\item subsequent columns: any friction model specific data.
+\item subsequent columns: any friction model specific data (quite possibly the friction coefficient).
 \end{itemize}
 
 \subsubsection{Private Data}
