elements.tex (negative mass, typo, misplaced optional brackets for in line and in plane, minamed beam slider as kinematic, beam slider more details about keywords and clarification about initial ids, general synthax correction for beam slider, slider example), controldata.tex (mention netcdf instead of binary output)

--- a/mbdyn/manual/input/controldata.tex
+++ b/mbdyn/manual/input/controldata.tex
@@ -320,9 +320,11 @@ the higher the precision, the larger the files and the slower the simulation.
     \bnt{card} ::= \kw{output precision} : \bnt{number_of_digits} ;
 \end{Verbatim}
 %\end{verbatim}
-This will no longer be an issue when the binary output is implemented;
-in that case, the output format will likely be fixed (float), or
-an optional extended format (double) will be allowed.
+%~ This will no longer be an issue when the binary output is implemented;
+%~ in that case, the output format will likely be fixed (float), or
+%~ an optional extended format (double) will be allowed.
+This is not an issue when using the NetCFD output, which returns double
+precision and is faster. See Section~\ref{sec:NETCDF} for more info.
 
 \subsection{Output Results}\label{sec:CONTROLDATA:NETCDF}
 This deprecated statement was intended for producing output in formats
