--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -197,7 +197,8 @@ when connected to a rotationless, 3 degree of freedom structural node.
         \{ \bnt{one_body}
             | \bnt{one_pointmass}
             | \kw{variable mass} , \bnt{one_vm_body}
-            | \kw{condense} , \bnt{num_masses} , \{ \bnt{one_body} | \bnt{one_pointmass} \} [ , ... ] \}
+            | [ \kw{condense} , \bnt{num_masses} , ] [ \kw{allow negative mass} , ]
+	      \{ \bnt{one_body} | \bnt{one_pointmass} \} [ , ... ] \}
 
     \bnt{one_body} ::=
         (\ty{real}) \bnt{mass} , 
@@ -221,6 +222,10 @@ many masses can be referred to the same element by means of the keyword
 \kw{condense}, followed by the number of expected masses \nt{num\_masses}.
 The format of each sub-mass is the same as for the single mass input (actually, 
 when \kw{condense} is not supplied, \nt{num\_masses} is assumed to be 1).
+If \kw{allow negative mass} is specified, it will be possible to use
+negative masses for the body. \textit{Warning}: the negative mass feature
+is not officially supported and could cause unexpected behavior (for
+example, gravity will still act as if the mass was positive).
 
 The \nt{inertia\_matrix} is always referred to the center of mass of the
 mass that is being added. It can be rotated locally by means of the extra
@@ -3496,22 +3501,22 @@ This joint implements a slider, e.g.\ it constrains a structural node
 on a string of three-node beams, as discussed in \cite{SLIDER-AIDAA-2003}.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{joint_type} ::= \kw{kinematic}
+    \bnt{joint_type} ::= \kw{beam slider}
 
     \bnt{joint_arglist} ::=
         \bnt{slider_node_label} ,
         (\hty{Vec3}) \bnt{relative_offset} ,
-        [ \kw{hinge} , (\hty{OrientationMatrix}) \bnt{relative_orientation} ] ,
+        [ \kw{hinge} , (\hty{OrientationMatrix}) \bnt{relative_orientation} , ]
         [ \kw{type} , \{ \kw{spherical} | \kw{classic} | \kw{spline} \} , ]
-        \bnt{beam_number} ,
-            \bnt{3_node_beam} ,
-                \{ \kw{same} | (\hty{Vec3}) \bnt{first_node_offset} \} ,
-    [ \kw{hinge} , \{ \kw{same} | (\hty{OrientationMatrix}) \bnt{first_node_orientation} ] , \}
+         \bnt{beam_number} ,
+	    \{ \bnt{3_node_beam} ,
+                 \{ \kw{same} | (\hty{Vec3}) \bnt{first_node_offset} \} ,
+    [ \kw{hinge} , \{ \kw{same} | (\hty{OrientationMatrix}) \bnt{first_node_orientation} \} , ]
                 (\hty{Vec3}) \bnt{mid_node_offset} ,
-    [ \kw{hinge} , (\hty{OrientationMatrix}) \bnt{mid_node_orientation} ] ,
+    [ \kw{hinge} , (\hty{OrientationMatrix}) \bnt{mid_node_orientation} , ]
                 (\hty{Vec3}) \bnt{end_node_offset} ,
-    [ \kw{hinge} , (\hty{OrientationMatrix}) \bnt{end_node_orientation} ] ,
-                [ ... ]
+    [ \kw{hinge} , (\hty{OrientationMatrix}) \bnt{end_node_orientation} , ] \}
+                [ \{...\} ]
         [ , \kw{initial beam} , \bnt{initial_beam} ]
         [ , \kw{initial node} , \bnt{initial_node} ]
         [ , \kw{smearing} , \bnt{smearing_factor} ]
@@ -3526,6 +3531,10 @@ There are three types of slider:
 	\item the \kw{spline} slider constrain the orientation
 	of the node.
 \end{itemize}
+Give the number of beams covered by the slider as the \nt{beam\_number}
+variable. Give an ordered list of beams where the slider can glide
+as a series of \nt{beam\_number} recurrences of the corresponding labels, 
+\nt{3\_node\_beam}, followed by the proper orientation descriptions.
 For each node of each beam element, the offset and the orientation
 of the slider can be defined; except for the first element, the
 offset and the orientation of the first node can be specified using
@@ -3533,11 +3542,45 @@ the keyword \kw{same}, which causes the node to take the same
 value of the last node of the previous beam.
 The \nt{initial\_beam} and \nt{initial\_node} indices
 serve as hints to set the initial contact point of the sliding node.
+\textit{Warning}: the \nt{initial\_beam} and \nt{initial\_node}
+indices do not correspond to the labels of the beam 
+and node but rather to their positions, counting from 1,
+in the list given to the slider
+and in the beam's declaration, respectively.
 The \nt{smearing\_factor} determines the (non-dimensional) extension
 of the interference segment when the node passes from one segment
 to another.
 Further information is available in \cite{SLIDER-AIDAA-2003}.
-
+A simple example of two beam sliders goes as follows:
+\begin{verbatim}
+    set: real smr = .1;
+    joint: 100, beam slider,
+            51, null,
+                    hinge, eye,
+            type, classic,
+            5,
+                    1, null, null, null,
+                    2, null, null, null,
+                    3, null, null, null,
+                    4, null, null, null,
+                    5, null, null, null,
+            initial beam, 1,
+            initial node, 1,
+            smearing, smr;
+    joint: 101, beam slider,
+            11, null,
+                    hinge, eye,
+            type, classic,
+            5,
+                    51, null, null, null,
+                    52, null, null, null,
+                    53, null, null, null,
+                    54, null, null, null,
+                    55, null, null, null,
+            initial beam, 5,
+            initial node, 3,
+            smearing, smr;
+\end{verbatim}
 
 
 \subsection{Brake}
@@ -4506,8 +4549,8 @@ along a line attached to the first node.
 
     \bnt{joint_arglist} ::= 
         \bnt{node_1_label} , 
-        [ \kw{position} , (\hty{Vec3}) \bnt{relative_line_position} , ]
-        [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation} , ]
+        [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_line_position} ,
+        [ \kw{orientation} , ] (\hty{OrientationMatrix}) \bnt{relative_orientation} ,
         \bnt{node_2_label}
         [ , \kw{offset} , (\hty{Vec3}) \bnt{relative_offset} ]
 	[ , \kw{friction} ,
@@ -4548,7 +4591,7 @@ in a plane attached to the first node.
 
     \bnt{joint_arglist} ::= 
         \bnt{node_1_label} , 
-        [ \kw{position} , (\hty{Vec3}) \bnt{relative_plane_position} , ]
+        [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_plane_position} ,
         ((\ty{Unit})\hty{Vec3}) \bnt{relative_normal_direction} ,
         \bnt{node_2_label}
         [ , \kw{offset} , (\hty{Vec3}) \bnt{relative_offset} ]
@@ -5485,7 +5528,7 @@ The syntax is:
 Optional parameters \kw{integration order} and \kw{integration segments}
 modify the behavior Gauss-Legendre quadrature rule used to 
 calculate the length and the instantaneous lengthening velocity of the
-element. As the name suggest, the first argument controls the order of
+element. As the name suggests, the first argument controls the order of
 the integration scheme; if not specified, it defaults to 2. The maximum
 order of integration currently implemented is 10. \\
 The second argument sets the number of segments in which the B\'ezier curve
