Fixed a couple of typos

--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -492,14 +492,14 @@ The following data are available:
   frame and the ``world'' $xy$ plane,  i.e. $\sin^{-1}\plbr{r_{31}}$,
   in radians
 \item \kw{"bank"}: the angle between the $y$ axis of the local
-  frame and the ``world'' $xy$ plane, i. e $\sin^{-1}\plbr{r_{32}}$,
+	frame and the ``world'' $xy$ plane, i.e. $\sin^{-1}\plbr{r_{32}}$,
   in radians
 \item \kw{"turn"}: the turn rate, the $z$ component of the angular
   velocity expressed in the ``world'' reference frame, measured in rad/min
 \item \kw{"slip"}: the sideslip angle, the angle between the $x$ axis of
   the local frame and the projection of the velocity vector in the $xy$
   plane of the local frame, units are radians
-\item \kw{verticalspeed"}: the $z$ component of the node velocity
+\item \kw{"verticalspeed"}: the $z$ component of the node velocity
 	in the ``world'' reference system, in m/s
 \item \kw{"angleofattack"}: the angle between the local $z$ and $x$ components
 	of the velocity (airstream plus node), expressed in the reference frame
