- complete documentation - fix output of first and last values - add custom angular frequency increment pattern

--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -265,6 +265,11 @@ This module implements several joints.
 
 
 
+\subsection{Module-hfelem}
+\input{module-hfelem}
+
+
+
 \subsection{Module-hydrodynamic\_plain\_bearing\_with\_offset}
 \emph{Author: Reinhard Resch}
 
