number of steps per period does not need to be even

--- a/mbdyn/manual/input/module-hfelem.tex
+++ b/mbdyn/manual/input/module-hfelem.tex
@@ -67,7 +67,7 @@ with
 \begin{itemize}
 \item $\nt{inputs\_number} > 0$; it is suggested that the \kw{node}, \kw{element} drive callers are used to extract relevant measures of the output of the system
 
-\item $\nt{steps\_number} > 0$ and even; the number of time steps within a single period, such that
+\item $\nt{steps\_number} > 1$; the number of time steps within a single period, such that
 \begin{align*}
 	\Delta t = \frac{2 \pi}{\omega \cdot \nt{steps\_number}}
 \end{align*}
